--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 logo: # add logo name
-title: Bef - Enjoy Freedom
+title: 袜元素
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ 袜元素 遇恋 棉皇后 芭贝亲亲.
 permalink: ':title/'
-baseurl: "/bef" # the subpath of your site, e.g. /blog
+baseurl: "/iwys" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Banner settings
