--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 logo: # add logo name
-title: 袜元素
+title: 袜元素 遇恋 棉皇后 芭贝亲亲
 description: > # this means to ignore newlines until "baseurl:"
- 袜元素 遇恋 棉皇后 芭贝亲亲.
+ 恒荣百货 | Changle Everglow Emporium
 permalink: ':title/'
 baseurl: "/iwys" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
