--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@ banner-desc: # add banner description
 
 # Author settings
 author-pic: face.jpg # your photo
-author-name: 崔文臣总代理# your name
-about-author: 欢迎多样性和包容性，为不同体型、喜好和需求的个体提供广泛的选择，确保每个人都能找到适合自己的产品。# about author
+author-name: 崔文臣总代理 # your name
+about-author: 鼓励多样性和包容性，为不同体型、喜好和需求的个体提供广泛的选择，确保每个人都能找到适合自己的产品。 # about author
 email: your-email@domain.com # your email
-phone: (+86)-15954446816 # your pnone number
-website: 微信搜索：袜元素商店 # you website
+phone: 微信号：cwc191413 # your pnone number
+website: 微信小程序搜索：袜元素商店 # you website
 
 # Social link
 google_url:    # add url link
