--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
-banner-title: # add banner title
+banner-title: 袜元素# add banner title
 banner-desc: # add banner description
 
 # Author settings
