--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,18 @@ title: 袜元素 遇恋 棉皇后 芭贝亲亲
 description: > # this means to ignore newlines until "baseurl:"
  恒荣百货 | Changle Everglow Emporium
 permalink: ':title/'
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "www.iwys.top" # the base hostname & protocol for your site, e.g. http://example.com
+
+#-------##-------##-------#  GitPage部署  #-------##-------##-------##-------##-------#
+baseurl: "/iwys" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+#------##-------##-------##-------##-------##-------##-------##-------##-------#
+
+#------##-------##-------#  网页部署  #-------##-------##-------##-------##-------##-------#
+#
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "www.iwys.top" # the base hostname & protocol for your site, e.g. http://example.com
+#
+#------##-------##-------##-------##-------##-------##-------##-------##-------##-------#
 
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
