--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ description: > # this means to ignore newlines until "baseurl:"
 permalink: ':title/'
 
 #-------##-------##-------#  GitPage部署  #-------##-------##-------##-------##-------#
-#baseurl: "/iwys" # the subpath of your site, e.g. /blog
-#url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/iwys" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #------##-------##-------##-------##-------##-------##-------##-------##-------#
 
 #------##-------##-------#  网页部署  #-------##-------##-------##-------##-------##-------#
 #
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "www.iwys.top" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "www.iwys.top" # the base hostname & protocol for your site, e.g. http://example.com
 #
 #------##-------##-------##-------##-------##-------##-------##-------##-------##-------#
 
